data/all_generated_tests/raw_wast_tests/block_StackCorruption_1934.wast
;; 5. **Test Description**: Design a `block` that uses the `br_if` instruction with a condition that is not properly consuming the correct number of operands from the stack.    - **Constraint Checked**: Checks for proper stack manipulation and operand consumption by conditional branch instructions within a block.    - **Relation to Stack Corruption**: Mismanagement of conditional branches can alter expected stack contents, leading to stack inconsistencies and corruption.

(assert_invalid
  (module (func $test-br_if-stack-mismanagement
    (block (result i32)
      (i32.const 1)
      (i32.const 2)
      (br_if 0 (i32.const 0))
      (i32.add)
    )
  ))
  "type mismatch"
)